[project]
name = "mock-rss-feed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "feedgen>=1.0",
    "pydantic[email]>=2.13.4",
    "redis>=5",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.36.2",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
